syntax = "proto3";
package statservice;

// Statistics server
service StatMethods{
    // Method for counting data 
    rpc GetRecordsCount (Empty) returns (RecordsResponse);  

    // Method for getting the population of a given country
    rpc GetPopulationOfCountry (PopulationRequest) returns (PopulationResponse);

    // Method for getting the number of cities in a given country with population over a minimum number
    rpc GetNumberOfCities (NumberOfCitiesRequest) returns (NumberOfCitiesResponse);
}


// Defining messages
message Empty{

}

message RecordsResponse {
    int32 records = 1;
}


message PopulationRequest{
    // Name of the country
    string country = 1;  
}

message PopulationResponse{
    int32 population = 1; 
}

message NumberOfCitiesRequest{
    string country = 1; 
    int32 min = 2; 
}

message NumberOfCitiesResponse{
    int32 number_of_cities = 1; 
}